feat: setup manual assistant flow

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nodemon ./core/zia.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
